# redis-starter-python

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
__test__/: Tests.http  todos_api_test.py  todos_test.py  validator_test.py
app/: main.py  redis.py  todos.py
app/components/todos/: router.py  store.py
src/app/: config.py  env.py  logger.py  main.py  redis.py
src/app/components/todos/: router.py  store.py
